@@ -22,7 +22,7 @@ all : win32.fas # win32.o
 win32.c win32.fas : win32.lisp
 	$(CLISP) -c win32.lisp
 
-win32.o : win32.c
+win32.o : win32.c $(INCLUDES)/clisp.h
 	$(CC) $(CPPFLAGS) $(CFLAGS) -I$(INCLUDES) -c win32.c
 
 # Make a module
